# PedigreeBot

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md
src/: auxillary.rs  main.rs  model.rs
src/updater/: commands.rs  graph_updater.rs  mod.rs  model.rs  tests.rs  tree.rs  utility.rs
