[package]
name = "pedigree-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.5", features = ["macros"] }
teloxide-core = { version = "0.3.4", features= ["auto_send"] }
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
warp = "0.3.1"
tokio-stream = "0.1.8"
reqwest = { version = "0.10", features = ["json"] }
serde_json = "1.0.68"
dotenv = "0.15.0"
futures = "0.3.17"
petgraph = "0.6.0"
strum_macros = "0.22.0"
strum = "0.22.0"
chashmap = "2.2.2"
